# Palau_food_ninja

./: .gitignore  NutritionNinja.spec  README.md  pyproject.toml
assets/: food_catalog.json  trap_catalog.json
assets/food_groups/: README.md  catalog.json
assets/food_groups/body_building/: README.md
assets/food_groups/energy/: README.md
assets/food_groups/protective/: README.md
benchmark_results/: benchmark_fps.json  benchmark_latency.json  benchmark_models.json  benchmark_onnx.json  benchmark_report.html  camshift_lookup.onnx  kalman_predict.onnx
docs/: PERFORMANCE.md  architecture.md  ecc-skill-shortlist.md  game-design.md
src/foodninja/: __init__.py  app.py  config.py
src/foodninja.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/foodninja/benchmark/: __init__.py  __main__.py  data_collector.py  fps_bench.py  latency_bench.py  model_compare.py  model_downloader.py  onnx_export.py  report.py  runner.py
src/foodninja/camera/: __init__.py  source.py
src/foodninja/core/: __init__.py  models.py  utils.py
src/foodninja/demo/: __init__.py  tracking_demo.py
src/foodninja/gameplay/: __init__.py  audio_engine.py  food_catalog.py  game_state.py  renderer.py  session.py  slice_engine.py  spawner.py
src/foodninja/gesture/: __init__.py  interpreter.py
src/foodninja/initialization/: __init__.py  interfaces.py  mediapipe_recovery.py
src/foodninja/tracking/: __init__.py  camshift.py  filters.py  gating.py  kalman.py  kalman_filter.py  pipeline.py  runtime.py  tracker.py
tests/: test_food_catalog.py  test_gating.py  test_spawner.py  test_tracking_pipeline.py  test_tracking_runtime.py
