[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodninja"
version = "0.1.0"
description = "Edge-based hand tracking nutrition education game with Kalman and CamShift."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Felix" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5"
]
vision = [
  "opencv-python>=4.10",
  "numpy>=1.26",
  "mediapipe>=0.10"
]
packaging = [
  "pyinstaller>=6.0"
]
benchmark = [
  "matplotlib>=3.9",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "rich>=13.0",
]

[project.scripts]
foodninja-bench = "foodninja.benchmark.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
